[package]
name = "ccstack"
version = "0.1.0"
edition = "2021"
description = "Reversible setup & config manager for Claude Code (cloud + hybrid local + Headroom)."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
anyhow = "1"
